--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  @apply 
+  flex flex-col 
+  justify-center
+  text-center w-[300px] h-[500px]
+  bg-[#282c34]
 }
 
 .App-logo {
